feat: movies details page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,15 @@
   scrollbar-color: #787777 #1e1e1e;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: white;
   background-color: #09090b;
+}
+
+.no-scrollbar {
+  scrollbar-width: none;
 }
