--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,3 +24,12 @@ body {
 .no-scrollbar {
   scrollbar-width: none;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
